RESOLVED FIXED286250
[WebGPU] Pipeline layout for compute pipelines is not validated to be valid
https://bugs.webkit.org/show_bug.cgi?id=286250
Summary [WebGPU] Pipeline layout for compute pipelines is not validated to be valid
Mike Wyrzykowski
Reported 2025-01-20 00:25:46 PST
[WebGPU] Pipeline layout for compute pipelines is not validated to be valid
Attachments
Mike Wyrzykowski
Comment 1 2025-01-20 00:26:05 PST
Mike Wyrzykowski
Comment 2 2025-01-20 00:33:53 PST
EWS
Comment 3 2025-01-20 11:47:05 PST
Committed 289162@main (2c15e1198606): <https://commits.webkit.org/289162@main> Reviewed commits have been landed. Closing PR #39284 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.