[WebGPU] Pipeline layout for compute pipelines is not validated to be valid https://bugs.webkit.org/show_bug.cgi?id=286250 rdar://143249146

Reviewed by Tadeu Zagallo.

Unlike RenderPipelines, creating a ComputePipeline did not check if the
associated PipelineLayout was invalid. Attempting to do so should result
in an invalid ComputePipeline according to the WebGPU specification, see
https://www.w3.org/TR/webgpu/#dom-gpudevice-createcomputepipeline

* LayoutTests/fast/webgpu/regression/repro_1380-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_1380.html: Added.
* LayoutTests/fast/webgpu/regression/repro_1380b-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_1380b.html: Added.
* LayoutTests/fast/webgpu/regression/repro_1380c-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_1380c.html: Added.
* LayoutTests/fast/webgpu/regression/repro_1380d-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_1380d.html: Added.
Add associated regression tests and expectations.

* Source/WebGPU/WebGPU/ComputePipeline.mm:
* Source/WebGPU/WebGPU/IsValidToUseWith.h:
(WebGPU::isValidToUseWithDevice):
* Source/WebGPU/WebGPU/RenderPipeline.mm:

Canonical link: https://commits.webkit.org/289162@main